--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ocpp-ts",
+  "name": "@evercharge/ocpp-ts",
   "version": "0.3.1",
   "description": "OCPP 1.6: Open Charge Point Protocol",
   "main": "dist/src/index.js",
@@ -10,6 +10,9 @@
     "build": "rm -rf ./dist/ && tsc",
     "test": "jest"
   },
+  "publishConfig": {
+    "@evercharge:registry": "https://npm.pkg.github.com"
+  },
   "keywords": [
     "ocpp",
     "typescript",
@@ -17,12 +20,8 @@
     "central-system",
     "websocket"
   ],
-  "author": "Evgeni Gordejev",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sepych/ocpp-ts/issues"
-  },
-  "homepage": "https://github.com/sepych/ocpp-ts",
+  "homepage": "https://github.com/evercharge/ocpp-ts/",
   "dependencies": {
     "ajv": "^6.12.6",
     "uuid": "^8.3.2",
